# ros2-robotic-manipulation

./: .gitignore  Dockerfile  README.md
colcon_ws/src/mybot_control/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/mybot_control/config/: mybot_controller.yaml
colcon_ws/src/mybot_control/launch/: controller.launch.py
colcon_ws/src/mybot_controller/: CMakeLists.txt  package.xml
colcon_ws/src/mybot_description/: CMakeLists.txt  README.md
colcon_ws/src/mybot_description/launch/: gazebo.launch.py  rviz_display.launch.py
colcon_ws/src/mybot_description/urdf/: mybot.urdf.xacro  mybot_gazebo.xacro  mybot_gazebo_ros2_control.xacro  mybot_ros2_control.xacro
colcon_ws/src/mybot_moveit/: CMakeLists.txt  package.xml
colcon_ws/src/mybot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  mybot.srdf  pilz_cartesian_limits.yaml
colcon_ws/src/mybot_moveit/launch/: moveit.launch.py
colcon_ws/src/mybot_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/mybot_msgs/srv/: QuaternionToEuler.srv
colcon_ws/src/mybot_utils/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/mybot_utils/mybot_utils/: angle_conversion.py
colcon_ws/src/mybot_utils/src/: angle_conversion.cpp
colcon_ws/src/pkg_cpp_examples/: CMakeLists.txt  package.xml
colcon_ws/src/pkg_cpp_examples/src/: simple_parameters.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
colcon_ws/src/pkg_python_examples/: package.xml  setup.cfg  setup.py
colcon_ws/src/pkg_python_examples/pkg_python_examples/: service_add_no.py  simple_parameters.py  simple_publisher.py  simple_service_client.py  simple_subscriber.py
mybot_controller/config/: mybot_controller.yaml
mybot_controller/launch/: controller.launch.py
mybot_description/: CMakeLists.txt  package.xml
mybot_description/launch/: rviz_display.launch.py
mybot_description/rviz/: rviz_config.rviz
mybot_description/urdf/: mybot.urdf.xacro  mybot_ros2_control.xacro
mybot_moveit/: CMakeLists.txt
mybot_moveit/config/: mybot.srdf
mybot_msgs/: CMakeLists.txt
mybot_msgs/srv/: EulerToQuaternion.srv
